# project-forge-registry

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_HANDOFF.md  README.md  pyproject.toml
artifacts/: CERBERUS_ARCHAEOLOGY_REPORT_20260506-144426.md  PROJECT_COMMAND_BOARD_DRAFT.md  RESTART_CHECKPOINT.md  dashboard.html  dashboard_inventory.json  dashboard_inventory_report.md  embed_apply_report.md  embed_plan_inventory.csv  embed_plan_report.md  export_sync_report.md  neon_command_board.html  neon_command_board_guarded_launcher_apply_design.json  neon_command_board_guarded_launcher_apply_design.md  neon_command_board_launcher_apply_dry_run.json  neon_command_board_launcher_apply_dry_run.md  neon_command_board_launcher_apply_preflight.json  neon_command_board_launcher_apply_preflight.md  neon_command_board_launcher_discovery.json  neon_command_board_launcher_discovery.md  neon_command_board_launcher_plan.json  neon_command_board_launcher_plan.md  neon_command_board_manifest.json  neon_command_board_replacement_review_plan.json  neon_command_board_replacement_review_plan.md  neon_command_board_report.md  obsidian_mirror_generation_report.md  obsidian_mirror_manifest.json  obsidian_mirror_report.md  obsidian_sync_report.md  obsidian_vault_apply_dry_run.json  obsidian_vault_apply_dry_run_report.md  obsidian_vault_apply_plan.json  obsidian_vault_apply_plan.md  obsidian_vault_maintenance_policy_report.md  obsidian_vault_real_apply_report.md  phase_10_closeout_report.md  project_passport_generation_report.md  project_scan_report.json  project_scan_report.md  project_sync_report.md  (+9 more)
config/: codex_profiles.example.yml  project_forge.example.yml
docs/: PROJECT_FORGE_CHECKPOINTS.md  PROJECT_FORGE_CODEX_PROFILES.md  PROJECT_FORGE_CODEX_PROFILE_BOOTSTRAP.md  PROJECT_FORGE_CODEX_PROFILE_ISOLATION_DEFERRAL.md  PROJECT_FORGE_COLD_START.md  PROJECT_FORGE_COLD_START_DESKTOP.md  PROJECT_FORGE_COMMAND_BOARD.md  PROJECT_FORGE_CONFIG.md  PROJECT_FORGE_DASHBOARD_INVENTORY.md  PROJECT_FORGE_DASHBOARD_LAUNCHER.md  PROJECT_FORGE_DASHBOARD_UI.md  PROJECT_FORGE_EMBED_APPLY.md  PROJECT_FORGE_EMBED_PLAN.md  PROJECT_FORGE_EXPORT_SYNC_PILOT.md  PROJECT_FORGE_NEON_COMMAND_BOARD.md  (+25 more)
(+155 files in other folders)
