[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-forge-registry"
version = "0.1.0"
description = "Dry-run project scanner and registry proposal tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-forge-registry = "project_forge_registry.cli:main"
project-forge-workspace-generate = "project_forge_registry.workspace_generation:main"
project-forge-passport-generate = "project_forge_registry.passport_generation:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
