[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-forge-registry"
version = "0.1.0"
description = "Dry-run project scanner and registry proposal tool."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
project-forge-registry = "project_forge_registry.cli:main"
project-forge-workspace-generate = "project_forge_registry.workspace_generation:main"
project-forge-passport-generate = "project_forge_registry.passport_generation:main"
project-forge-obsidian-mirror-generate = "project_forge_registry.obsidian_mirror_generation:main"
project-forge-obsidian-sync = "project_forge_registry.obsidian_sync:main"
project-forge-export-sync = "project_forge_registry.export_sync:main"
project-forge-remote-plan = "project_forge_registry.remote_policy:main_plan"
project-forge-remote-verify = "project_forge_registry.remote_policy:main_verify"
project-forge-push-ready = "project_forge_registry.remote_policy:main_push_ready"
project-sync = "project_forge_registry.project_sync:main"
project-forge-dashboard-inventory = "project_forge_registry.dashboard_inventory:main"
project-forge-dashboard-ui = "project_forge_registry.dashboard_ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
